# cloud_project

./: .gitignore  NARRATIVE_REPORT.md  PIPELINE_REPORT.md  README.md  REPORT.md
experiments/: analyze.py  analyze_perclass.py  analyze_perclass_wl2.py  analyze_v2.py  plot.py  run_cbp_v3.sh  run_cbp_v4.sh  run_main.sh  run_main_v2.sh  run_perclass_a1.sh  run_perclass_a1_wl2.sh  run_perf.sh  run_pilot_sweep.sh  run_scaling.sh  run_tpb.sh  run_tpb_v2.sh  run_tpb_v3.sh  run_tpb_v4.sh  run_tpb_v5_3wl.sh
idea-stage/: IDEA_REPORT.md
paper/: README.md  report_tables.html  report_tables.tex  tpb.tex
repo/PrediCache/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  btree.cpp  btree.hpp  buffer_frame.hpp  buffer_manager.hpp  cbp.hpp  guards.hpp  ht.hpp  libaio_interface.hpp  page.hpp  predicache.cpp  uring_interface.hpp  versioned_lock.hpp
repo/PrediCache/benchmarks/: Benchmark.hpp  PrediCacheAdapter.hpp
repo/PrediCache/benchmarks/rndread/: RndReadBenchmark.cpp  RndReadBenchmark.hpp
repo/PrediCache/benchmarks/shared/: Schema.hpp
repo/PrediCache/benchmarks/tpcc/: Schema.hpp  TPCCBenchmark.cpp  TPCCBenchmark.hpp  TPCCWorkload.hpp
repo/PrediCache/benchmarks/utils/: ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp
repo/PrediCache/benchmarks/ycsb/: YCSBBenchmark.cpp  YCSBBenchmark.hpp
repo/PrediCache/utils/: RandomGenerator.hpp
research-wiki/: gap_map.md  index.md  log.md  query_pack.md
research-wiki/claims/: C1.md  C2.md  C3.md  C4.md
review-stage/: AUTO_REVIEW.md  review_prompt.md
(+375 files in other folders)
